cl-modal: icon name and z-index fixes

--- a/less/cl-modal.less
+++ b/less/cl-modal.less
@@ -17,7 +17,7 @@
 
 	&-overlay {
 		position: fixed;
-		z-index: 101;
+		z-index: 1001;
 		left: 0;
 		top: 0;
 		right: 0;
@@ -27,7 +27,7 @@
 		position: fixed;
 		top: 100px;
 		left: 50%;
-		z-index: 102;
+		z-index: 1002;
 
 		&.size_s {
 			width: 300px;
